// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow Editor matches the snapshot for an empty workflow pipeline list 1`] = `
Array [
  Object {
    "data": Object {
      "label": <React.Fragment>
        <AssetSelector
          database="databaseid"
        />
      </React.Fragment>,
    },
    "id": "asset0",
    "position": Object {
      "x": 0,
      "y": 0,
    },
    "sourcePosition": "bottom",
    "type": "input",
  },
  Object {
    "data": Object {
      "label": <WorkflowPipelineSelector
        data-testid="create-workflow-pipeline-selector"
        database="databaseid"
        index={0}
      />,
    },
    "id": "pipeline0",
    "position": Object {
      "x": 0,
      "y": 75,
    },
    "sourcePosition": "bottom",
    "targetPosition": "top",
  },
  Object {
    "id": "asset0-pipeline0",
    "source": "asset0",
    "target": "pipeline0",
    "type": "smoothstep",
  },
  Object {
    "data": Object {
      "label": <React.Fragment>
        <AssetID />
        -
        <PipelineDetail
          index={0}
          prop="pipelineId"
        />
        <PipelineDetail
          index={0}
          prop="outputType"
        />
      </React.Fragment>,
    },
    "id": "asset1",
    "position": Object {
      "x": 0,
      "y": 150,
    },
    "sourcePosition": "right",
    "targetPosition": "top",
  },
  Object {
    "id": "pipeline0-asset1",
    "source": "pipeline0",
    "target": "asset1",
    "type": "smoothstep",
  },
]
`;

exports[`Workflow Editor matches the snapshot for zero length pipeline list 1`] = `
Array [
  Object {
    "data": Object {
      "label": <React.Fragment>
        <AssetSelector
          database="databaseid"
        />
      </React.Fragment>,
    },
    "id": "asset0",
    "position": Object {
      "x": 0,
      "y": 0,
    },
    "sourcePosition": "bottom",
    "type": "input",
  },
]
`;
